# eagle-eye

./: .gitignore  Cargo.toml  README.md  ]
doc/api/: file.md
eagle-eye-broadcaster/src/: lib.rs  receiver.rs  sender.rs
eagle-eye-broadcaster/tests/: interval.rs  is_broadcasting.rs  is_running.rs  running.rs
eagle-eye-client/: Cargo.toml
eagle-eye-client/src/: main.rs
eagle-eye-daemon/: Cargo.toml
eagle-eye-daemon/src/: job.rs  main.rs
eagle-eye-daemon/src/server/: mod.rs
eagle-eye-device/: Cargo.toml
eagle-eye-device/src/: lib.rs
eagle-eye-http/src/: lib.rs  status.rs
eagle-eye-jobs/: Cargo.toml
eagle-eye-jobs/src/: file.rs  lib.rs
eagle-eye-proto/: Cargo.toml
eagle-eye-proto/src/: async.rs  job.rs  lib.rs  main.rs  sync.rs  utils.rs
eagle-eye-proto/src/client/: mod.rs  sync.rs
eagle-eye-proto/src/listener/: mod.rs  sync.rs
eagle-eye-proto/src/server/: config.rs  mod.rs  sync.rs
eagle-eye-proto/src/stream/: mod.rs  sync.rs
eagle-eye-proto/src/task/: mod.rs  sync.rs
eagle-eye-server/: Cargo.toml
eagle-eye-server/src/: lib.rs  main.rs
ee-app/: Cargo.toml
ee-app/src/: app_data.rs  lib.rs  value.rs
ee-app/src/app/: mod.rs  receiver_app.rs
ee-app/src/receiver/sync/: app.rs  handler.rs  mod.rs  server.rs
ee-broadcaster/: Cargo.toml
ee-broadcaster/src/: receiver.rs  sender.rs
ee-broadcaster/tests/: is_running.rs
ee-cli/: Cargo.toml
ee-device/: Cargo.toml
ee-device/src/: lib.rs  task_sender.rs  test.rs  utils.rs
ee-http/: Cargo.toml
ee-http/src/: lib.rs  request.rs  response.rs  status.rs
ee-proto/: Cargo.toml
ee-proto/src/: lib.rs
ee-receiver/: Cargo.toml
ee-receiver/src/: app.rs  config.rs  data.rs  handler.rs  main.rs  receiver.rs  utils.rs
ee-receiver/src/proto/: mod.rs
ee-sender/: Cargo.toml
ee-sender/src/: main.rs
ee-storage/: Cargo.toml
ee-storage/src/: lib.rs  value.rs
ee-stream/: Cargo.toml
ee-stream/src/: buffer.rs  lib.rs  sync.rs
ee-stream/src/buffer/: buffer.rs  mod.rs  r_buf.rs  test.rs  w_buf.rs
ee-stream/src/e_stream/: mod.rs  sync.rs
ee-task/: Cargo.toml
ee-task/src/: file.rs  lib.rs  ping_pong.rs  prelude.rs
frontend/: vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx
key/: cert.pem  key.pem
web/: 404.html  index.html
