[workspace]
resolver = "3"
members = [
    "ee-broadcaster",
    "ee-cli",
    "ee-sender",
    "ee-receiver",
    "ee-task",
    "ee-device",
    "ee-http",
    "ee-stream"
]

[workspace.dependencies]
aes = "0.8.4"
base64 = "0.22.1"
ctr = "0.9.2"
cbc = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.1"
widestring = "1.2.0"
