[workspace]
resolver = "3"
members = [
    "ee-broadcaster",
  #"ee-sender",
   "ee-receiver",
  # "ee-task",
  # "ee-device",
  # "ee-http",
    "ee-stream",
    "ee-proto"
, "ee-app"]

[workspace.dependencies]
aes = "0.8.4"
base64 = "0.22.1"
ctr = "0.9.2"
cbc = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"
tokio = { version = "1", features = ["full"] }
widestring = "1.2.0"
mlua = { version = "0.11", features = ["luajit", "vendored"] }
