[package]
name = "eagle-eye-proto"
version = "0.1.0"
edition = "2024"

[features]
default = ["all"]

all = ["sync", "async"]
sync = []
async = ["tokio"]

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util"], optional = true }
aes = "0.8.4"
cbc = "0.1.2"
crossbeam = "0.8"
ctr = "0.9.2"
rand = "0.9.1"
