[package]
name = "ee-sender"
version = "0.1.0"
edition = "2024"

[dependencies]
ee-broadcaster = { path = "../ee-broadcaster" }
ee-task = { path = "../ee-task" }
ee-http = { path = "../ee-http" }
ee-device = { path = "../ee-device" }
aes = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
ctr = { workspace = true }
rand = { workspace = true }
cbc = { workspace = true }
tokio = { workspace = true }
hyper = { version = "1", features = ["server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
